// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast> should be focused when actionable 1`] = `<div />`;

exports[`<Toast> should be focused when actionable 2`] = `
<div>
  <section
    aria-label="Notifications alt+T"
    tabindex="-1"
  >
    <ol
      class="Toaster"
      data-sonner-toaster="true"
      data-theme="light"
      data-x-position="right"
      data-y-position="bottom"
      dir=""
      style="--front-toast-height: 0px; --offset: 16px; --width: 356px; --gap: 8px;"
      tabindex="-1"
    >
      <li
        aria-atomic="true"
        aria-live="assertive"
        class=""
        data-dismissible="true"
        data-expanded="false"
        data-front="true"
        data-index="0"
        data-mounted="false"
        data-promise="false"
        data-removed="false"
        data-sonner-toast=""
        data-styled="false"
        data-swipe-out="false"
        data-swiping="false"
        data-visible="true"
        data-x-position="right"
        data-y-position="bottom"
        role="status"
        style="--index: 0; --toasts-before: 0; --z-index: 1; --offset: -8px; --initial-height: 0px;"
        tabindex="0"
      >
        <div
          class="Toast Toast--context_info"
        >
          <div
            class="Toast__contextIcon"
          >
            <svg
              data-testid="info-icon"
            />
          </div>
          <div
            class="Toast__content"
          >
            <div
              class="Toast__message"
            >
              <h3 />
              <p>
                Description
              </p>
            </div>
            <div
              class="Toast__actions"
            >
              <p
                class="Toast__toast-action"
                role="presentation"
              >
                action1
              </p>
            </div>
          </div>
          <button
            aria-label="closeButton"
            class="Toast__closeButton"
            type="button"
          >
            <svg
              class="Toast__closeIcon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ol>
  </section>
</div>
`;

exports[`<Toast> should close automatically after 2500ms 1`] = `
<div>
  <section
    aria-label="Notifications alt+T"
    tabindex="-1"
  >
    <ol
      class="Toaster"
      data-sonner-toaster="true"
      data-theme="light"
      data-x-position="right"
      data-y-position="bottom"
      dir=""
      style="--front-toast-height: 0px; --offset: 16px; --width: 356px; --gap: 8px;"
      tabindex="-1"
    >
      <li
        aria-atomic="true"
        aria-live="polite"
        class=""
        data-dismissible="true"
        data-expanded="false"
        data-front="true"
        data-index="0"
        data-mounted="false"
        data-promise="false"
        data-removed="false"
        data-sonner-toast=""
        data-styled="false"
        data-swipe-out="false"
        data-swiping="false"
        data-visible="true"
        data-x-position="right"
        data-y-position="bottom"
        role="status"
        style="--index: 0; --toasts-before: 0; --z-index: 1; --offset: -8px; --initial-height: 0px;"
        tabindex="0"
      >
        <div
          class="Toast Toast--context_info"
        >
          <div
            class="Toast__contextIcon"
          >
            <svg
              data-testid="info-icon"
            />
          </div>
          <div
            class="Toast__content"
          >
            <div
              class="Toast__message"
            >
              <h3>
                Test
              </h3>
              <p>
                Description
              </p>
            </div>
            <div
              class="Toast__actions"
            />
          </div>
          <button
            aria-label="closeButton"
            class="Toast__closeButton"
            type="button"
          >
            <svg
              class="Toast__closeIcon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ol>
  </section>
</div>
`;

exports[`<Toast> should close toast when clicking on the close button 1`] = `
<div>
  <section
    aria-label="Notifications alt+T"
    tabindex="-1"
  >
    <ol
      class="Toaster"
      data-sonner-toaster="true"
      data-theme="light"
      data-x-position="right"
      data-y-position="bottom"
      dir=""
      style="--front-toast-height: 0px; --offset: 16px; --width: 356px; --gap: 8px;"
      tabindex="-1"
    >
      <li
        aria-atomic="true"
        aria-live="polite"
        class=""
        data-dismissible="true"
        data-expanded="false"
        data-front="true"
        data-index="0"
        data-mounted="false"
        data-promise="false"
        data-removed="false"
        data-sonner-toast=""
        data-styled="false"
        data-swipe-out="false"
        data-swiping="false"
        data-visible="true"
        data-x-position="right"
        data-y-position="bottom"
        role="status"
        style="--index: 0; --toasts-before: 0; --z-index: 1; --offset: -8px; --initial-height: 0px;"
        tabindex="0"
      >
        <div
          class="Toast Toast--context_info"
        >
          <div
            class="Toast__contextIcon"
          >
            <svg
              data-testid="info-icon"
            />
          </div>
          <div
            class="Toast__content"
          >
            <div
              class="Toast__message"
            >
              <h3 />
              <p>
                Description
              </p>
            </div>
            <div
              class="Toast__actions"
            />
          </div>
          <button
            aria-label="closeButton"
            class="Toast__closeButton"
            type="button"
          >
            <svg
              class="Toast__closeIcon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ol>
  </section>
</div>
`;

exports[`<Toast> should close when action item callback is clicked 1`] = `<div />`;

exports[`<Toast> should close when action item href is clicked 1`] = `<div />`;

exports[`<Toast> should render toast correctly 1`] = `<div />`;

exports[`<Toast> should render toast correctly 2`] = `
<div>
  <section
    aria-label="Notifications alt+T"
    tabindex="-1"
  >
    <ol
      class="Toaster"
      data-sonner-toaster="true"
      data-theme="light"
      data-x-position="right"
      data-y-position="bottom"
      dir=""
      style="--front-toast-height: 0px; --offset: 16px; --width: 356px; --gap: 8px;"
      tabindex="-1"
    >
      <li
        aria-atomic="true"
        aria-live="polite"
        class=""
        data-dismissible="true"
        data-expanded="false"
        data-front="true"
        data-index="0"
        data-mounted="false"
        data-promise="false"
        data-removed="false"
        data-sonner-toast=""
        data-styled="false"
        data-swipe-out="false"
        data-swiping="false"
        data-visible="true"
        data-x-position="right"
        data-y-position="bottom"
        role="status"
        style="--index: 0; --toasts-before: 0; --z-index: 1; --offset: -8px; --initial-height: 0px;"
        tabindex="0"
      >
        <div
          class="Toast Toast--context_info"
        >
          <div
            class="Toast__contextIcon"
          >
            <svg
              data-testid="info-icon"
            />
          </div>
          <div
            class="Toast__content"
          >
            <div
              class="Toast__message"
            >
              <h3>
                Test
              </h3>
              <p>
                Description
              </p>
            </div>
            <div
              class="Toast__actions"
            />
          </div>
          <button
            aria-label="closeButton"
            class="Toast__closeButton"
            type="button"
          >
            <svg
              class="Toast__closeIcon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ol>
  </section>
</div>
`;
